# systemd-motion

./: DEBUGGING.md  HIDDEN_README.md  INSTALL.md  INSTALLATION_GUIDE.md  PUBLISH.md  README.md  STEALTH_INSTALL.sh  install.sh  pyproject.toml
.github/workflows/: build.yml
data/: com.motion.activity-monitor.desktop
debian/: changelog  control  copyright  postinst  prerm  rules
logs/: process.txt
motion/: __main__.py  compatibility.py  control.py  core.py  debug.py  desktop_app.py  gui.py  health.py
scripts/: build_deb.sh  build_packages.sh  create_icon.py  install.sh  install_from_source.sh  motion-compatibility  motion-ctl  motion-debug  motion-gui  motion-health  quick-test  run-tests  simple_install.sh  start.sh  status.sh  stop.sh  uninstall.sh  user_build.sh
snap/: snapcraft.yaml
tests/: test_motion.py
