[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemd-motion"
version = "1.0.0"
description = "Systemd Motion Session Manager"
authors = [{ name = "Systemd Motion Team" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "dbus-next>=0.2.3",
]

[project.scripts]
systemd-motion = "motion.__main__:main"
motion-ctl = "motion.control:main"
motion-gui = "motion.desktop_app:main"

[tool.setuptools.packages.find]
include = ["motion*"]